--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@prisma/client": "^5.1.1",
     "@t3-oss/env-nextjs": "^0.7.0",
+    "axios": "^1.6.1",
+    "http-proxy-middleware": "^2.0.6",
     "next": "^14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
