--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "http-proxy-middleware": "^2.0.6",
     "next": "^14.0.0",
     "react": "18.2.0",
+    "react-cytoscapejs": "^2.0.0",
     "react-dom": "18.2.0",
     "zod": "^3.22.4"
   },
@@ -25,6 +26,7 @@
     "@types/eslint": "^8.44.2",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.33",
+    "@types/react-cytoscapejs": "^1.2.5",
     "@types/react-dom": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
