--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ subset_normalized_json_file_with_scaler.json
 subset_normalized_json_file.json
 subset_pretrained_flat_txs.json
 all_features.json
-elliptic_txs_json.json
+elliptic_txs.json
 flat_txs.json
 predicted_unknown.csv
 *.pdf
